Add initial index.html and placeholder for card art

--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cybervamp CCG - The Crimson Nexus</title>
+    <title>Cybervamp CCG - Crimson Nexus</title>
     <style>
-        body { background: #000; color: #F0F8FF; font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-        h1 { color: #8B0000; text-shadow: 0 0 10px #FF4500; }
-        .neon { color: #FF4500; text-shadow: 0 0 5px #FF4500; }
+        body { background: #000; color: #F0F8FF; font-family: 'Arial', sans-serif; text-align: center; padding: 50px; }
+        h1 { color: #8B0000; text-shadow: 0 0 15px #FF4500; font-size: 3em; }
+        .neon { color: #FF4500; text-shadow: 0 0 10px #FF4500; }
+        img { max-width: 400px; border: 2px solid #4B0082; box-shadow: 0 0 20px #8B0000; margin: 20px; }
     </style>
 </head>
 <body>
-    <h1>Welcome to <span class="neon">Cybervamp</span></h1>
-    <p>Gothic shadows meet neon eternity. CCG launching soon.</p>
-    <p>Your site is now live! Add card art to assets/img/ next.</p>
+    <h1><span class="neon">Cybervamp</span> CCG</h1>
+    <p>Gothic baroque meets neon cyber-vampires in the Crimson Nexus.</p>
+    <p>Site launching – add your card art below!</p>
+    
+    <!-- Example: Drop one of your card images here -->
+    <img src="assets/img/Land white 01.png" alt="Neon Revenant Card">
+    
+    <p>Live at: https://cybervampccg.github.io/cybervamp.github.io/</p>
 </body>
 </html>
