--- a/index.html
+++ b/index.html
@@ -78,6 +78,56 @@
             text-align: center;
             color: #8b8b8b;
         }
+/* Smoother page feel */
+html { scroll-behavior: smooth; }
+
+/* Navbar improvements */
+.navbar {
+    backdrop-filter: blur(10px); /* Frosted glass cyber effect */
+    box-shadow: 0 4px 30px rgba(139, 0, 0, 0.3);
+}
+
+/* Hero enhancements */
+.hero {
+    min-height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: radial-gradient(circle at 30% 70%, rgba(75,0,130,0.15), transparent 60%);
+    pointer-events: none;
+}
+.hero h1 {
+    animation: glow 3s ease-in-out infinite alternate;
+}
+@keyframes glow {
+    from { text-shadow: 0 0 10px #8b0000, 0 0 20px #ff4500; }
+    to   { text-shadow: 0 0 20px #8b0000, 0 0 40px #ff4500, 0 0 60px #4b0082; }
+}
+
+/* Gallery cards as proper card components */
+.card-item {
+    background: rgba(10, 0, 5, 0.6);
+    border: 1px solid #4b0082;
+    border-radius: 12px;
+    overflow: hidden;
+    transition: all 0.4s;
+}
+.card-item:hover {
+    transform: translateY(-10px) scale(1.03);
+    box-shadow: 0 15px 40px rgba(139, 0, 0, 0.7);
+}
+.card-img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    background: #000;
+}
     </style>
 </head>
 <body>
