--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ body::before {
             </div>
 
             <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/White Spell 002.png" class="card-img img-fluid" alt="white spell 002">
+                <img src="assets/img/white spell 002.png" class="card-img img-fluid" alt="white spell 002">
             </div>
 
             <div class="col-md-4 col-lg-3 mb-5">
@@ -210,23 +210,23 @@ body::before {
             </div>
 
             <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Land white 02.png" class="card-img img-fluid" alt="Red Spell 002">
+                <img src="assets/img/Red Spell 002.png" class="card-img img-fluid" alt="Red Spell 002">
             </div>
 
             <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Land white 02.png" class="card-img img-fluid" alt="Black Creature 017">
+                <img src="assets/img/Black Creature 01.png" class="card-img img-fluid" alt="Black Creature 017">
             </div>
 
             <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Land white 02.png" class="card-img img-fluid" alt="black creature 005">
+                <img src="assets/img/black creature 005.png" class="card-img img-fluid" alt="black creature 005">
             </div>
 
             <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Land white 02.png" class="card-img img-fluid" alt="Relic 006 Hemotech Patch">
+                <img src="assets/img/Relic 006 Hemotech Patch.png" class="card-img img-fluid" alt="Relic 006 Hemotech Patch">
             </div>
 
             <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Land white 02.png" class="card-img img-fluid" alt="Red Creature 010">
+                <img src="assets/img/Red Creature 010.png" class="card-img img-fluid" alt="Red Creature 010">
             </div>
 
 
