--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@ body::before {
             </div>
 
             <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Red Spell 002.png" class="card-img img-fluid" alt="Red Spell 002">
+                <img src="assets/img/Red spell 002.png" class="card-img img-fluid" alt="Red Spell 002">
             </div>
 
             <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Black Creature 01.png" class="card-img img-fluid" alt="Black Creature 017">
+                <img src="assets/img/Black Creature 017.png" class="card-img img-fluid" alt="Black Creature 017">
             </div>
 
             <div class="col-md-4 col-lg-3 mb-5">
