--- a/index.html
+++ b/index.html
@@ -182,53 +182,97 @@ body::before {
         <h2>Manifestations of the Nexus</h2>
         <div class="row justify-content-center">
 
-<div class="col-md-4 col-lg-3 mb-5">
-    <div class="card-item">
-        <img src="assets/img/White Creature 002.png" class="card-img" alt="White Faction Creature - Eternal Aristocracy">
-        <div class="p-3 text-center small">White Creature 002</div>
+<div class="row justify-content-center g-4">
+
+    <!-- White Creature 002 (already good) -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/White Creature 002.png" class="card-img" alt="White Faction Creature - Eternal Aristocracy" loading="lazy">
+            <div class="p-3 text-center small">White Creature 002 – Eternal Aristocracy Wall</div>
+        </div>
     </div>
+
+    <!-- Purple Spell 001 -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/Purple Spell 001.png" class="card-img" alt="Purple Spell - Arcane Subterfuge" loading="lazy">
+            <div class="p-3 text-center small">Purple Spell 001 – Arcane Subterfuge</div>
+        </div>
+    </div>
+
+    <!-- White Spell 002 -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/white spell 002.png" class="card-img" alt="White Spell - Relic Activation" loading="lazy">
+            <div class="p-3 text-center small">White Spell 002 – Relic Activation</div>
+        </div>
+    </div>
+
+    <!-- Land Red 01 -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/Land Red 01.png" class="card-img" alt="Red Blood Land - Neon Sprawl" loading="lazy">
+            <div class="p-3 text-center small">Land Red 01 – Neon Sprawl Blood Source</div>
+        </div>
+    </div>
+
+    <!-- Land White 01 -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/Land white 01.png" class="card-img" alt="White Blood Land - Crystal Enclave" loading="lazy">
+            <div class="p-3 text-center small">Land White 01 – Crystal Enclave Blood Source</div>
+        </div>
+    </div>
+
+    <!-- Land White 02 -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/Land white 02.png" class="card-img" alt="White Blood Land - Marble Spire" loading="lazy">
+            <div class="p-3 text-center small">Land White 02 – Marble Spire Blood Source</div>
+        </div>
+    </div>
+
+    <!-- Red Spell 002 -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/Red spell 002.png" class="card-img" alt="Red Spell - Overclock Surge" loading="lazy">
+            <div class="p-3 text-center small">Red Spell 002 – Overclock Surge</div>
+        </div>
+    </div>
+
+    <!-- Black Creature 017 -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/Black Creature 017.png" class="card-img" alt="Black Creature - Fleshwoven Behemoth" loading="lazy">
+            <div class="p-3 text-center small">Black Creature 017 – Fleshwoven Behemoth</div>
+        </div>
+    </div>
+
+    <!-- Black Creature 005 -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/black creature 005.png" class="card-img" alt="Black Creature - Necro-Siphon Minion" loading="lazy">
+            <div class="p-3 text-center small">Black Creature 005 – Necro-Siphon Minion</div>
+        </div>
+    </div>
+
+    <!-- Relic 006 Hemotech Patch -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/Relic 006 Hemotech Patch.png" class="card-img" alt="Relic - Hemotech Patch" loading="lazy">
+            <div class="p-3 text-center small">Relic 006 – Hemotech Patch (Vita-Plasma Stabilizer)</div>
+        </div>
+    </div>
+
+    <!-- Red Creature 010 -->
+    <div class="col-md-4 col-lg-3 mb-5">
+        <div class="card-item">
+            <img src="assets/img/Red Creature 010.png" class="card-img" alt="Red Creature - Neon Revenant Speedster" loading="lazy">
+            <div class="p-3 text-center small">Red Creature 010 – Neon Revenant Speedster</div>
+        </div>
+    </div>
+
 </div>
-
-            <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Purple Spell 001.png" class="card-img img-fluid" alt="Purple Spell">
-            </div>
-
-            <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/white spell 002.png" class="card-img img-fluid" alt="white spell 002">
-            </div>
-
-            <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Land Red 01.png" class="card-img img-fluid" alt="Red Land">
-            </div>
-
-            <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Land white 01.png" class="card-img img-fluid" alt="White Land 01">
-            </div>
-
-            <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Land white 02.png" class="card-img img-fluid" alt="White Land 02">
-            </div>
-
-            <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Red spell 002.png" class="card-img img-fluid" alt="Red Spell 002">
-            </div>
-
-            <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Black Creature 017.png" class="card-img img-fluid" alt="Black Creature 017">
-            </div>
-
-            <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/black creature 005.png" class="card-img img-fluid" alt="black creature 005">
-            </div>
-
-            <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Relic 006 Hemotech Patch.png" class="card-img img-fluid" alt="Relic 006 Hemotech Patch">
-            </div>
-
-            <div class="col-md-4 col-lg-3 mb-5">
-                <img src="assets/img/Red Creature 010.png" class="card-img img-fluid" alt="Red Creature 010">
-            </div>
-
 
             <!-- Add more by copying the div above and updating src/alt -->
 
