--- a/index.html
+++ b/index.html
@@ -14,10 +14,33 @@
 
 <!-- Lightbox2 JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js" integrity="sha512-IxzLNa4RDO8jF6Q3b3Qb1w6vC6h+5qS0X6Kx9v3r4r2rXv7t1d5k3k1pX9b4W5U8tJ+8d8p0l5q2z0v8b4Q6g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script>
+    lightbox.option({
+        'fadeDuration': 300,
+        'imageFadeDuration': 300,
+        'resizeDuration': 400,
+        'wrapAround': true,
+        'disableScrolling': true,
+        'fitImagesInViewport': true,
+        'alwaysShowNavOnTouchDevices': true,  // arrows on mobile too
+        'maxWidth': 1400,
+        'maxHeight': 1000
+    });
+</script>
+
     <!-- Google Fonts: Playfair Display for gothic/victorian feel -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
     
     <style>
+/* Make sure the entire overlay is clickable to close */
+.lb-backdrop, .lb-outerContainer, .lb-dataContainer {
+    cursor: pointer !important;
+}
+.lb-image {
+    cursor: default !important; /* don't change cursor on image itself */
+}
+
         body {
             background: #0a0005;
             color: #f0e6ff;
@@ -315,7 +338,36 @@ body::before {
         <p>Built by @Aeternis</p>
     </footer>
 
-    <!-- Bootstrap JS -->
+        <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- Lightbox2 JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js" integrity="sha512-IxzLNa4RDO8jF6Q3b3Qb1w6vC6h+5qS0X6Kx9v3r4r2rXv7t1d5k3k1pX9b4W5U8tJ+8d8p0l5q2z0v8b4Q6g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- Lightbox configuration -->
+    <script>
+        lightbox.option({
+            'fadeDuration': 300,
+            'imageFadeDuration': 300,
+            'resizeDuration': 400,
+            'wrapAround': true,
+            'disableScrolling': true,
+            'fitImagesInViewport': true,
+            'alwaysShowNavOnTouchDevices': true,
+            'maxWidth': 1400,
+            'maxHeight': 1000
+        });
+    </script>
+
+    <!-- Optional: extra backdrop click safety -->
+    <style>
+        .lb-backdrop, .lb-outerContainer, .lb-dataContainer {
+            cursor: pointer !important;
+        }
+        .lb-image {
+            cursor: default !important;
+        }
+    </style>
+
 </body>
 </html>
