--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
                     <li class="nav-item"><a class="nav-link" href="pages/factions.html">Factions</a></li>
                     <li class="nav-item"><a class="nav-link" href="pages/ccg-hub.html">Rules</a></li>
                     <li class="nav-item"><a class="nav-link" href="#gallery-section">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/community.html">Community</a></li>
+                    <li class="nav-item">
+    <a class="nav-link" href="https://x.com/Aeternis" target="_blank" rel="noopener noreferrer">
+        Community
+    </a>
+</li>
                 </ul>
             </div>
         </div>
