--- a/pages/lore.html
+++ b/pages/lore.html
@@ -110,7 +110,9 @@
                     <li class="nav-item"><a class="nav-link active" href="lore.html">Lore</a></li>
                     <li class="nav-item"><a class="nav-link" href="factions.html">Factions</a></li>
                     <li class="nav-item"><a class="nav-link" href="ccg-hub.html">Rules</a></li>
-                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                    <li class="nav-item">
+    <a class="nav-link" href="https://cybervampccg.github.io/cybervamp.github.io/#gallery-section">Gallery</a>
+</li>
                     <li class="nav-item"><a class="nav-link" href="community.html">Community</a></li>
                 </ul>
             </div>
