--- a/pages/ccg-hub.html
+++ b/pages/ccg-hub.html
@@ -40,7 +40,7 @@
             text-align: center;
             padding: 140px 20px 80px;
             background: linear-gradient(rgba(10, 0, 5, 0.85), rgba(10, 0, 5, 0.7)),
-                        url('../assets/img/Relic 003.png'); /* Reuse hero bg from root; adjust path if needed */
+                        url('../assets/img/Cybervamp 004.png'); /* Reuse hero bg from root; adjust path if needed */
             background-size: cover;
             background-position: center;
             min-height: 60vh;
