--- a/pages/factions.html
+++ b/pages/factions.html
@@ -40,7 +40,7 @@
             text-align: center;
             padding: 140px 20px 100px;
             background: linear-gradient(rgba(10, 0, 5, 0.85), rgba(10, 0, 5, 0.7)),
-                        url('../assets/img/Relic 003.png');
+                        url('../assets/img/Cybervamp 005.png');
             background-size: cover;
             background-position: center;
             min-height: 70vh;
